--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 </head>
 <body>
 
+    <div class="loader">
+        <img src="./sources/imgs/loader2.gif" alt="">
+    </div>
+
     <div class="wrapper">
 
         <div class="header">
