--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HU19 | Home</title>
+    <link rel="icon" type="image/ico" href="sources/imgs/logo.png" />
 
     <!-- bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -21,6 +22,7 @@
     <!-- internal files -->
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/hamburgers.min.css">
 
 </head>
 <body>
@@ -37,6 +39,12 @@
                     <source src="sources/videos/abstract.mp4" type="video/mp4">
                 </video>
             </div>
+
+            <button class="hamburger hamburger--spring is-active" type="button">
+                <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+                </span>
+            </button>
 
             <!--nav>
                 <ul>
@@ -71,12 +79,12 @@
             </div>
         </div>
 
-        <!--div class="section1">
+        <div class="section2">
             <h1>hello world</h1>
             <h1>hello world</h1>
             <h1>hello world</h1>
             <h1>hello world</h1>
-        </div-->
+        </div>
 
     </div>
 
