--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </video>
             </div>
 
-            <button class="hamburger hamburger--spring is-active" type="button">
+            <button class="hamburger hamburger--spring" type="button">
                 <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
                 </span>
