--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- imported fonts -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Thasadith" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
 
     <!-- moment.js file -->
     <script src="js/moment.min.js"></script>
@@ -46,15 +47,24 @@
                 </span>
             </button>
 
-            <!--nav>
-                <ul>
-                    <li>item1</li>
-                    <li>item2</li>
-                    <li>item3</li>
-                    <li>item4</li>
-                    <li>item5</li>
-                </ul>
-            </nav-->
+            <nav class="nav-hidden">
+                <div class="row nav-items-hidden">
+                    <div class="col-lg-5">
+                        <h1><span>HU19</span></br></br>
+                            &ldquo;Where possibilities are endless.&rdquo;</h1>
+                    </div>
+                    <div class="col-lg-7">
+                        <ul>
+                            <li>Home</li>
+                            <li>About</li>
+                            <li>Events</li>
+                            <li>Gallery</li>
+                            <li>Team</li>
+                            <li>Contact</li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
 
             <div class="row header-content">
                 <div class="col-lg-3"></div>
@@ -79,12 +89,12 @@
             </div>
         </div>
 
-        <div class="section2">
+        <!--div class="section2">
             <h1>hello world</h1>
             <h1>hello world</h1>
             <h1>hello world</h1>
             <h1>hello world</h1>
-        </div>
+        </div-->
 
     </div>
 
