--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
                             <li>Gallery</li>
                             <li>Team</li>
                             <li>Contact</li>
+                            <p id="nav-copyright">© 2019 HU19 All Rights Reserved</p>
                         </ul>
                     </div>
+                    </div>
                 </div>
+                
             </nav>
 
             <div class="row header-content">
