--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
     </div>
 
     <div class="wrapper">
+        <nav class="nav-hidden">
+            <div class="row nav-items-hidden">
+                <div class="col-lg-5">
+                    <h1><span>HU19</span></br></br>
+                        &ldquo;Where possibilities are endless.&rdquo;</h1>
+                </div>
+                <div class="col-lg-7">
+                    <ul>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Events</li>
+                        <li>Gallery</li>
+                        <li>Team</li>
+                        <li>Contact</li>
+                        <p id="nav-copyright">© 2019 HU19 All Rights Reserved</p>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
         <div class="header">
             <div class="header-video">
@@ -45,28 +64,6 @@
                 <span class="hamburger-inner"></span>
                 </span>
             </button>
-
-            <nav class="nav-hidden">
-                <div class="row nav-items-hidden">
-                    <div class="col-lg-5">
-                        <h1><span>HU19</span></br></br>
-                            &ldquo;Where possibilities are endless.&rdquo;</h1>
-                    </div>
-                    <div class="col-lg-7">
-                        <ul>
-                            <li>Home</li>
-                            <li>About</li>
-                            <li>Events</li>
-                            <li>Gallery</li>
-                            <li>Team</li>
-                            <li>Contact</li>
-                            <p id="nav-copyright">© 2019 HU19 All Rights Reserved</p>
-                        </ul>
-                    </div>
-                    </div>
-                </div>
-                
-            </nav>
 
             <div class="row header-content">
                 <div class="col-lg-3"></div>
@@ -95,13 +92,15 @@
 
         <div class="timing-section row">
             <div class="detail-col col-lg-6">
-                <h1 class="about-header">About Us</h1>
-                <h1>Heritage Utsav is the annual cultural fest of Heritage Institute of Technology, Kolkata and is held every year in March/April. This is organised by Students' Council of Heritage Institute Of Technology.
-                        With one of the biggest artist line-up ever this year, Heritage Utsav 2019 is touted to be one of the best college fests of Eastern India.
-                        With over 40 cultural and sports events and an overall footfall of 40,000 students spanning 3 days of the fest, Heritage Utsav is something you will be looking forward to.
-                        1st April - 6th April are the dates one must book for a fun filled ride of inter-college competitions and great performances by imminent artists.
-
-                </h1>
+                <div class="detail-container">
+                    <h1 class="about-header">About Us</h1>
+                    <h1>Heritage Utsav is the annual cultural fest of Heritage Institute of Technology, Kolkata. This is organised by Students' Council of Heritage Institute Of Technology.
+                            With one of the biggest artist line-up ever this year, Heritage Utsav 2019 is touted to be one of the best college fests of Eastern India.
+                            With over 40 cultural and sports events and an overall footfall of 40,000 students spanning 6 days of the fest, Heritage Utsav is something you will be looking forward to.
+                            1st April - 6th April are the dates one must book for a fun filled ride of inter-college competitions and great performances by imminent artists.
+                    </h1>
+                    <!--button>Hello buttob</button-->
+                </div>
             </div>
             <div class="timer-col col-lg-6">
                 <h1 class="countdown"></h1>
