--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+    <!-- scrollmagic CDN -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+
     <!-- imported fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 
@@ -36,7 +40,7 @@
             <div class="row nav-items-hidden">
                 <div class="col-lg-5">
                     <h1><span>HU19</span></br></br>
-                        &ldquo;Where possibilities are endless.&rdquo;</h1>
+                        &ldquo; Where possibilities are endless.&rdquo;</h1>
                 </div>
                 <div class="col-lg-7">
                     <ul>
@@ -73,6 +77,7 @@
                 <div class="col-lg-3 header-text">
                     <h1>Heritage Utsav '19
                         <div id="displayMoment">
+                            <p style="font-size: 2.5vh;">Heritage Institute of Technology</p>
                             <p>April 1, 2019</p>
                         </div>
                     </h1>
@@ -92,7 +97,7 @@
 
         <div class="timing-section row">
             <div class="detail-col col-lg-6">
-                <div class="detail-container">
+                <div id="details-c" class="detail-container">
                     <h1 class="about-header">About Us</h1>
                     <h1>Heritage Utsav is the annual cultural fest of Heritage Institute of Technology, Kolkata. This is organised by Students' Council of Heritage Institute Of Technology.
                             With one of the biggest artist line-up ever this year, Heritage Utsav 2019 is touted to be one of the best college fests of Eastern India.
@@ -102,10 +107,40 @@
                     <!--button>Hello buttob</button-->
                 </div>
             </div>
-            <div class="timer-col col-lg-6">
+            <div id="details-t" class="timer-col col-lg-6">
                 <h1 class="countdown"></h1>
             </div>
         </div>
+
+        <footer class="container-fluid">
+            <div class="row foot1">
+                <div class="col-lg-4">
+                    <h2 class="footer-head1">HU19</h2>
+                    <p style="font-size: 2.5vh;"></br>
+                    &ldquo; Where possibilities</br>are endless.&rdquo;</p>
+                </div>
+                <div class="col-lg-4">
+                    <h2 class="footer-head">Important Links</h2>
+                    <br>
+                    <p>Home</p>
+                    <p>Office Bearers</p>
+                    <p>Events</p>
+                    <p>Contact Us</p>
+                </div>
+                <div class="col-lg-4">
+                    <h2 class="footer-head">Support & Feedback</h2>
+                    <br>
+                    <p>For any queries regarding participation, sponsorship, schedule, etc. <br> you can email us at <a href="">hu19@gmail.com</a></p>
+                    <p>Any constructive feedback and/or suggestion will also be appreciated.</p>
+                    <span class="footerLogo"><img src="./sources/imgs/logo.png" alt="" width="28px"> <p style="display:inline;" >| HU19</p></span>
+                </div>
+            </div>
+            <div class="row foot2">
+                <div class="col-lg-12">
+                    <p>&copy; 2019 HU19 All Rights Reserved</p>
+                </div>
+            </div>
+        </footer>
 
     </div>
 
