--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="col-lg-4">
                     <h2 class="footer-head">Support & Feedback</h2>
                     <br>
-                    <p>For any queries regarding participation, sponsorship, schedule, etc. <br> you can email us at <a href="">hu19@gmail.com</a></p>
+                    <p>For any queries regarding participation, sponsorship, schedule, etc. <br> email us at <a href="">hu19@gmail.com</a></p>
                     <p>Any constructive feedback and/or suggestion will also be appreciated.</p>
                     <span class="footerLogo"><img src="./sources/imgs/logo.png" alt="" width="28px"> <p style="display:inline;" >| HU19</p></span>
                 </div>
