--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <footer class="container-fluid">
             <div class="row foot1">
                 <div class="col-lg-4">
-                    <h2 class="footer-head1"><img src="./sources/imgs/logo.png" alt="HU19 Logo" width="85px">&nbsp;HU19</h2>
+                    <h2 class="footer-head1"><img src="./sources/imgs/logo.png" alt="HU19 Logo" width="85px">HU19</h2>
                     <p style="font-size: 2.5vh;"></br>
                     &ldquo; Where possibilities</br>are endless.&rdquo;</p>
                 </div>
