fixed nav layering

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="wrapper">
         <nav class="nav-hidden">
-            <div class="row nav-items-hidden">
+            <div class="row">
                 <div class="col-lg-5">
                     <h1><span>HU19</span></br></br>
                         &ldquo; Where possibilities are endless.&rdquo;</h1>
