--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <div class="detail-col col-lg-6">
                 <div id="details-c" class="detail-container">
                     <h1 class="about-header">About Us</h1>
-                    <h1>Heritage Utsav is the annual cultural fest of Heritage Institute of Technology, Kolkata. This is organised by Students' Council of Heritage Institute Of Technology.
+                    <h1>Heritage Utsav is the annual cultural fest of Heritage Institute of Technology, Kolkata.
                             With one of the biggest artist line-up ever this year, Heritage Utsav 2019 is touted to be one of the best college fests of Eastern India.
-                            With over 40 cultural and sports events and an overall footfall of 40,000 students spanning 6 days of the fest, Heritage Utsav is something you will be looking forward to.
+                            With over 40 technical and cultural events and an overall footfall of 40,000 students spanning 6 days of the fest, Heritage Utsav is something you will be looking forward to.
                             1st April - 6th April are the dates one must book for a fun filled ride of inter-college competitions and great performances by imminent artists.
                     </h1>
                     <!--button>Hello buttob</button-->
