--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="./sources/imgs/loader.gif" alt="">
     </div>
 
-    <div class="wrapper">
+    <div class="wrapper container-fluid">
         <nav class="nav-hidden">
             <div class="row">
                 <div class="col-lg-5">
@@ -112,7 +112,109 @@
             </div>
         </div>
 
-        <footer class="container-fluid">
+        <div class="row events">
+            <div class="col-lg-2">
+
+            </div>
+
+            <div class="col-lg-8 event-card-container">
+                <h1 class="events-header">Events</h1>
+            </div>
+
+            <div class="col-lg-2">
+
+            </div>
+        </div>
+
+        <div id="gal-head" class="row gallery">
+            <div class="col-lg-2">
+            </div>
+            <div class="col-lg-8">
+                <h1 class="gallery-header">Gallery</h1>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="./sources/imgs/img1.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>The Best Header</h5>
+                                <p>The best description</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./sources/imgs/img2.jpg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>The Best Header</h5>
+                                <p>The best description</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./sources/imgs/img3.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>The Best Header</h5>
+                                <p>The best description</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./sources/imgs/img4.jpg" alt="Fourth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>The Best Header</h5>
+                                <p>The best description</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./sources/imgs/img5.jpg" alt="Fifth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>The Best Header</h5>
+                                <p>The best description</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./sources/imgs/img6.jpg" alt="Sixth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>The Best Header</h5>
+                                <p>The best description</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./sources/imgs/img7.jpg" alt="Seventh slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>The Best Header</h5>
+                                <p>The best description</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./sources/imgs/img8.jpg" alt="Eighth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>The Best Header</h5>
+                                <p>The best description</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-2">
+            </div>
+        </div>
+
+        <footer>
             <div class="row foot1">
                 <div class="col-lg-4">
                     <h2 class="footer-head1"><img src="./sources/imgs/logo.png" alt="HU19 Logo" width="85px">HU19</h2>
