--- a/sources/prc/index.html
+++ b/sources/prc/index.html
@@ -43,40 +43,39 @@
 </div>
 </div>
 
+<div class="row">
+    <div class="Gallery" style="float:bottom;position:absolute;width:100%;margin-top:25px;">
+        <h1 align="center" class="glow">Gallery</h1>
+        <div class="slideshow-container">
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="gallery00.jpg" style="width:100%" class="ss">
+                <div class="text">Caption Text</div>
+            </div>
 
-<div class="Gallery" style="float:bottom;position:absolute;width:100%;margin-top:25px;">
-<h1 align="center" class="glow">Gallery</h1>
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="gallery00.jpg" style="width:100%" class="ss">
+                <div class="text">Caption Two</div>
+            </div>
 
-<div class="slideshow-container">
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="gallery00.jpg" style="width:100%" class="ss">
+                <div class="text">Caption Three</div>
+            </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="gallery00.jpg" style="width:100%" class="ss">
-  <div class="text">Caption Text</div>
+        </div>
+        <br>
+        <div style="text-align:center">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
+    </div>
 </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="gallery00.jpg" style="width:100%" class="ss">
-  <div class="text">Caption Two</div>
-</div>
 
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="gallery00.jpg" style="width:100%" class="ss">
-  <div class="text">Caption Three</div>
-</div>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-</div>
-
-	</div>
 	</body>
 
 <style>
