--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <!-- moment.js file -->
     <script src="js/moment.min.js"></script>
 
+    <!-- font awesome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <!-- internal files -->
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -117,8 +120,29 @@
 
             </div>
 
-            <div class="col-lg-8 event-card-container">
+            <div id="details-eve" class="col-lg-8 event-card-container">
                 <h1 class="events-header">Events</h1>
+                <div class="event-card">
+                    <h1>Clutural Events
+                        </br></br><i class="fas fa-person-booth"></i>
+                    </h1>
+                    </br>
+                    <button>Schedule</button>
+                </div>
+                <div class="event-card">
+                    <h1>Technical Events
+                        </br></br><i class="fas fa-terminal"></i>
+                    </h1>
+                    </br>
+                    <button>Schedule</button>
+                </div>
+                <div class="event-card">
+                    <h1>Sports&nbsp; Events
+                        </br></br><i class="fas fa-basketball-ball"></i>
+                    </h1>
+                    </br>
+                    <button>Schedule</button>
+                </div>
             </div>
 
             <div class="col-lg-2">
