--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="wrapper container-fluid">
-        <!--nav class="nav-hidden">
+        <nav class="nav-hidden">
             <div class="row">
                 <div class="col-lg-5">
                     <h1><span>HU19</span></br></br>
@@ -57,7 +57,7 @@
                     </ul>
                 </div>
             </div>
-        </nav-->
+        </nav>
 
         <div class="header">
             <div class="header-video">
