added nav links

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                 </div>
                 <div class="col-lg-7">
                     <ul>
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Events</li>
-                        <li>Gallery</li>
-                        <li>Team</li>
-                        <li>Contact</li>
+                        <li><a href="#detail-head">Home</a></li>
+                        <li><a href="#details-c">About</a></li>
+                        <li><a href="#details-eve">Events</a></li>
+                        <li><a href="#gal-head">Gallery</a></li>
+                        <li><a href="#details-c">Team</a></li>
+                        <li><a href="#details-c">Contact</a></li>
                         <p id="nav-copyright">© 2019 HU19 All Rights Reserved</p>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <div class="header">
+        <div id="detail-head" class="header">
             <div class="header-video">
                 <video autoplay muted loop>
                     <source src="sources/videos/abstract.mp4" type="video/mp4">
@@ -117,13 +117,12 @@
 
         <div class="row events" style="width:100%;">
             <div class="col-lg-2">
-
             </div>
 
             <div id="details-eve" class="col-lg-8 event-card-container">
                 <h1 class="events-header">Events</h1>
                 <div class="event-card">
-                    <h1>Clutural Events
+                    <h1>Cultural Events
                         </br></br><i class="fas fa-person-booth"></i>
                     </h1>
                     </br>
@@ -146,7 +145,6 @@
             </div>
 
             <div class="col-lg-2">
-
             </div>
         </div>
 
