--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <button>Schedule</button>
                 </div>
                 <div class="event-card">
-                    <h1>Sports&nbsp; Events
+                    <h1>Guest Performances
                         </br></br><i class="fas fa-basketball-ball"></i>
                     </h1>
                     </br>
