--- a/index.html
+++ b/index.html
@@ -121,29 +121,35 @@
             <div id="details-eve" class="col-lg-8 event-card-container">
                 <h1 class="events-header">Events</h1>
                 <div class="event-card">
-                    <h1>Cultural Events
-                        </br></br><i class="fas fa-person-booth"></i>
-                    </h1>
-                    </br>
-                    <button>Schedule</button>
-                </div>
-                <div class="event-card">
                     <h1>Technical Events
                         </br></br><i class="fas fa-terminal"></i>
                     </h1>
                     </br>
-                    <button>Schedule</button>
+                    <a href="./sources/prc/technical.html"><button>Schedule</button></a>
                 </div>
                 <div class="event-card">
                     <h1>Guest Performances
-                        </br></br><i class="fas fa-basketball-ball"></i>
+                        </br></br><i class="fas fa-heart"></i>
                     </h1>
                     </br>
-                    <button>Schedule</button>
+                    <a href="./sources/prc/events.html"><button>Schedule</button></a>
+                </div>
+                <div class="event-card">
+                    <h1>Cultural Events
+                        </br></br><i class="fas fa-person-booth"></i>
+                    </h1>
+                    </br>
+                    <a href="./sources/prc/cultural.html"><button>Schedule</button></a>
                 </div>
             </div>
 
             <div class="col-lg-2">
+            </div>
+
+            <div class="col-lg-12 brochure-button">
+                <center>
+                    <a href="./sources/Heritage Utsav 2019 Brochure.pdf" download><button>Download Brochure</button></a>
+                </center>
             </div>
         </div>
 
@@ -253,7 +259,7 @@
                 <div class="col-lg-4">
                     <h2 class="footer-head">Support & Feedback</h2>
                     <br>
-                    <p>For any queries regarding participation, sponsorship, schedule, etc. <br> email us at <a href="">hu19@gmail.com</a></p>
+                    <p>For any queries regarding participation, sponsorship, schedule, etc. email us at <a href="">heritageutsav2019@gmail.com</a></p>
                     <p>Any constructive feedback and/or suggestion will also be appreciated.</p>
                     <span class="footerLogo"><img src="./sources/imgs/logo.png" alt="HU19 Logo" width="28px"> <p style="display:inline;" >| HU19</p></span>
                 </div>
