--- a/sources/prc/technical.html
+++ b/sources/prc/technical.html
@@ -25,14 +25,17 @@
 			<table width="100%">
 
 				<tr><th colspan="2" style="text-align:center;"><h2>Day 1(1st Apr)</h2></th></tr>
-				<tr><td>TechTonic</td>
-					<td>10am-11am</td>
+				<tr><td>Blood donation drive</td>
+					<td>10am-4pm</td>
 				</tr>
-				<tr><td>Construct</td>
-					<td>12 noon-3pm</td>
+				<tr><td>TechTonic</td>
+					<td>10am-12pm</td>
+				</tr>
+				<tr><td>Construkt</td>
+					<td>12-3pm</td>
 				</tr>
 				<tr><td>CircuiTricks</td>
-					<td>12 noon-4pm</td>
+					<td>12-5pm</td>
 				</tr>
 				<tr><td>Rural-La-Carte</td>
 					<td>12noon-2pm</td>
@@ -41,15 +44,18 @@
 					<td>11am-1pm</td>
 				</tr>
 				<tr><td>Poster Presentation & Model Making</td>
-					<td>2:30pm-4:30am</td>
+					<td>2:30pm-4:30pm</td>
 				</tr>
 				<tr><td>Debate Competetion</td>
-					<td>10am-11am</td>
+					<td>2-5pm</td>
 				</tr>
 
 			<tr><th colspan="2" style="text-align:center"><h2>Day 2(2nd Apr)</h2></th></tr>
+				<tr><td>Carpe Diem</td>
+					<td>10am-12pm</td>
+				</tr>
 				<tr><td>Game of Roads</td>
-					<td>10am-2pm</td>
+					<td>10am-5pm</td>
 				</tr>
 				<tr><td>Cross-Roads</td>
 					<td>10am-5pm</td>
@@ -61,19 +67,19 @@
 					<td>10am-5pm</td>
 				</tr>
 				<tr><td>League of Bots</td>
-					<td>2pm-4pm</td>
+					<td>2pm-5pm</td>
 				</tr>
 				<tr><td>Mutex</td>
 					<td>11am-3pm</td>
 				</tr>
 				<tr><td>Brand-o-Than</td>
-					<td>12noon-2pm</td>
+					<td>12-2pm</td>
 				</tr>
 				<tr><td>Precision Prelims</td>
 					<td>2:30-4pm</td>
 				</tr>
-				<tr><td>Science Quiz Finals</td>
-					<td>2:30pm - 4:30pm</td>
+				<tr><td>Science & Maths Quiz(Finals)</td>
+					<td>2:30 - 4:30pm</td>
 				</tr>
 				<tr><td>Counter Strike GO(Knock out)</td>
 					<td>10am - 5pm</td>
@@ -90,27 +96,30 @@
 
 			<tr><th colspan="2" style="text-align:center"><h2>Day 3(3rd Apr)</h2></th></tr>
 				<tr><td>ElectroSpint</td>
-					<td>10am-5m</td>
+					<td>10am-5pm</td>
 				</tr>
 				<tr><td>ChemPower</td>
 					<td>10am-2pm</td>
 				</tr>
 				<tr><td>Code it</td>
-					<td>10am-1pm</td>
+					<td>10am-2pm</td>
 				</tr>
 				<tr><td>Scam Jam</td>
-					<td>10am-12noon</td>
+					<td>10am-12pm</td>
+				</tr>
+				<tr><td>Drone Works</td>
+					<td>11am-1pm</td>
 				</tr>
 				<tr><td>Biz-Tech Quiz</td>
-					<td>12noon-2pm</td>
+					<td>12-2pm</td>
 				</tr>
 				<tr><td>Innovation Challenge</td>
-					<td>11am - 5pm</td>
+					<td>11am-4pm</td>
 				</tr>
 				<tr><td>X-Wings</td>
-					<td>11am - 5pm</td>
+					<td>1-2pm</td>
 				</tr>
-				<tr><td>Flip it up</td>
+				<tr><td>Flip It Up</td>
 					<td>2pm-3:30pm</td>
 				</tr>
 				<tr><td>Precision Finals</td>
