--- a/sources/prc/cultural.html
+++ b/sources/prc/cultural.html
@@ -28,16 +28,16 @@
 
 			<tr><th colspan="2" style="text-align:center"><h2>Day 4(4th Apr)</h2></th></tr>
 				<tr><td>Eastern Fusion Band Competetion</td>
-					<td>10am-4pm</td>
+					<td>10am-3:30pm</td>
 				</tr>
 				<tr><td>Western Group Dance</td>
-					<td>2 - 4pm /td>
+					<td>2 - 4pm </td>
 				</tr>
 				<tr><td>Creative Writing</td>
 					<td>11am-12pm</td>
 				</tr>
 				<tr><td>Adspoof Competetion</td>
-					<td>10am-1pm</td>
+					<td>10am-12:30pm</td>
 				</tr>
 				<tr><td>Script Writing</td>
 					<td>1pm-2pm</td>
@@ -46,16 +46,16 @@
 					<td>1pm-4pm</td>
 				</tr>
 				<tr><td>Movie Screening</td>
-					<td>2:30-5pm</td>
+					<td>10-5pm</td>
 				</tr>
-				<tr><td>Antakshari</td>
-					<td>3pm - 5pm</td>
+				<tr><td>Antakshari(Faculty)</td>
+					<td>4 - 5pm</td>
 				</tr>
 				<tr><td>Stage Drama</td>
-					<td>1pm - 5pm</td>
+					<td>1 - 5pm</td>
 				</tr>
 				<tr><td>Photography exhibition</td>
-					<td>10am - 5pm</td>
+					<td>12:30 - 5pm</td>
 				</tr>
 				<tr><td>Film Debate</td>
 					<td>12:30 - 5pm</td>
@@ -63,25 +63,25 @@
 
 			<tr><th colspan="2" style="text-align:center"><h2>Day 5(5th Apr)</h2></th></tr>
 				<tr><td>Western Band Competetion</td>
-					<td>12am-4pm</td>
+					<td>11am-3pm</td>
 				</tr>
 				<tr><td>60secs to fame</td>
-					<td>12pm-1:30pm</td>
+					<td>12-1:30pm</td>
 				</tr>
 				<tr><td>Solo dance</td>
-					<td>10:30am-12pm</td>
+					<td>11-12pm</td>
 				</tr>
 				<tr><td>Eastern Solo Singing</td>
-					<td>11pm-12pm</td>
+					<td>1-4pm</td>
 				</tr>
 				<tr><td>Photgraphy Workshop</td>
 					<td>1pm-4pm</td>
 				</tr>
 				<tr><td>Eastern solo singing</td>
-					<td>3pm-5:30pm</td>
+					<td>1-4pm</td>
 				</tr>
 				<tr><td>Instrumental Event</td>
-					<td>4pm - 6pm</td>
+					<td>4 - 6pm</td>
 				</tr>
 				<tr><td>Street Play</td>
 					<td>11pm - 3pm</td>
@@ -112,8 +112,11 @@
 				<tr><td>Madvertisement</td>
 					<td>11am-1pm</td>
 				</tr>
+				<tr><td>Western Solo Singing</td>
+					<td>2-4pm</td>
+				</tr>
 				<tr><td>Outdoor Painting competetion</td>
-					<td>10am-12pm</td>
+					<td>2-5pm</td>
 				</tr>
 				<tr><td>Review competetion</td>
 					<td>1-3pm</td>
@@ -125,10 +128,10 @@
 					<td>11am-1pm</td>
 				</tr>
 				<tr><td>Photography Exhibition</td>
-					<td>12:30pm-5:30pm</td>
+					<td>12:30-5:00pm</td>
 				</tr>
 				<tr><td>College Bands</td>
-					<td>12pm - 2:30pm</td>
+					<td>12 - 2pm</td>
 				</tr>
 				<tr><td>Movie Screening</td>
 					<td>11-5pm</td>
