--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 </div>
                 <div class="col-lg-7">
                     <ul>
-                        <li><a href="#detail-head">Home</a></li>
                         <li><a href="#details-c">About</a></li>
                         <li><a href="#details-eve">Events</a></li>
+                        <li><a href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx">Register Now</a></li>
                         <li><a href="#gal-head">Gallery</a></li>
                         <li><a href="#details-c">Team</a></li>
                         <li><a href="#details-c">Contact</a></li>
@@ -77,7 +77,8 @@
                     <img src="./sources/imgs/logo.png" alt="HU19 Logo">
                 </div>
                 <div class="col-lg-3 header-text">
-                    <h1>Heritage Utsav '19
+                    <h1>
+                        <img src="./sources/imgs/heritageutsav.png" alt="Heritage Utsav '19">
                         <div id="displayMoment">
                             <p style="font-size: 2.5vh;">Heritage Institute of Technology</p>
                             <p>April 1-6, 2019</p>
@@ -155,22 +156,19 @@
             <div class="col-lg-2">
             </div>
 
-            <div class="col-lg-12 brochure-button">
+            <div class="col-lg-12 event-buttons">
                 <center>
-                    <a href="./sources/Heritage Utsav 2019 Brochure.pdf" download><button>Download Brochure</button></a>
-                </center>
-            </div>
-            <div class="col-lg-12 register-button">
-                <center>
-                    <a href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx" download><button>Register Here</button></a>
+                    <a class="register-button" href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx" download><button>Register Here</button></a>
+                    <br><br><br>
+                    <a class="brochure-button" href="./sources/Heritage Utsav 2019 Brochure.pdf" download><button>Download Brochure</button></a>
                 </center>
             </div>
         </div>
 
-        <div id="gal-head" class="row gallery" style="width:100%;">
+        <div class="row gallery1">
             <div class="col-lg-2">
             </div>
-            <div class="col-lg-8">
+            <div id="gal-head" class="col-lg-8 gallery">
                 <h1 class="gallery-header">Gallery</h1>
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
